# PLENA_Software

./: .gitignore  .gitmodules  mkdocs.yml  pyproject.toml
configs/: composite_mxint.toml  linear_mxfp.toml  linear_mxint.toml  linear_mxint_gptq.toml  linear_mxint_gptq_w_search.toml  linear_mxint_rotate.toml  linear_mxint_weight_only.toml  llada_kv_mxint4.toml  qwen_mxint8_attn_mxint4_mlp.toml
configs/table5/: llama2_13b_mxint_w4a16kv16.toml  llama2_70b_mxint_w4a16kv16.toml  llama2_7b_mxint_w4a16kv16.toml  llama3_70b_mxint_w4a16kv16.toml  llama3_8b_mxint_w4a16kv16.toml
docs/: api-reference.md  evaluation.md  getting-started.md  index.md
docs/configuration/: overview.md  toml-reference.md
plena_experiments/: README.md
plena_experiments/table10/: README.md
plena_experiments/table10/scripts/: run_ablation_gsm8k.sh  run_ablation_humaneval.sh
plena_experiments/table9/: README.md
plena_experiments/table9/scripts/: launch_gsm8k_ablation.sh  (+5 more)
quant_eval/: distributed.py  quantize.py  quantize_tp.py  utils.py
quant_eval/cli/: QUANT_HF_SERVE.md  ablation.py  ablation_gsm8k_gptq.py  eval.py  eval_dllm.py  eval_evalplus.py  eval_llada.py  eval_lm.py  eval_osworld.py  eval_phase_bfcl.py  eval_phase_lm.py  eval_ppl.py  plain_quant_serve.py  quant_hf_serve.py  search_rotation.py
quant_eval/configs/: glm4_moe_mxint8.toml  gpt_oss_mxfp4_attn_only.toml  gpt_oss_mxint4_attn_only.toml  llama_mxint4.toml  qwen3_moe_mxint4.toml  qwen3_mxint16.toml  qwen3_mxint16_rotate.toml  qwen3_mxint8.toml
quant_eval/eval/: __init__.py  collect_calib.py  eval_harness.py  eval_ppl.py  eval_utils.py  evalplus.py  lm_eval.py  osworld.py  phase_quant.py
quant_eval/quantize/: __init__.py  config.py
quant_eval/scripts/: launch_humaneval_ablation.sh  run_bfcl_search.sh  run_lm_eval_phase.sh  run_rotation_search_gsm8k.sh
quant_eval/utils/: __init__.py  device.py  logger.py
scripts/: run_lm_eval_phase.sh  run_lm_eval_uniform.sh  run_ppl_baseline.sh  run_ppl_mixed_precision.sh  run_ppl_mxint4.sh
(+44 files in other folders)
