[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant_eval"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.55",
    "lm-eval>=0.4",
    "datasets",
    "accelerate",
    "colorlog",
    "safetensors",
    "tqdm",
    "jsonargparse",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["quant_eval"]
