[project]
name = "quant_eval"
version = "0.1.0"
requires-python = ">=3.11.9"
dependencies = [
    "torch>=2.6",
    "torchvision",
    "transformers>=4.55",
    "lm-eval>=0.4",
    "datasets",
    "accelerate",
    "colorlog",
    "tqdm",
    "jsonargparse",
    "mase",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
mase = { git = "https://github.com/DeepWok/mase.git", branch = "releases/plena-experiments" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quant_eval"]
